# followmee-py

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/followmee_py/: __init__.py  exceptions.py  followmee_api.py  models.py  rest_adapter.py
